--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "gsap": "^3.12.5",
         "html-react-parser": "^5.1.10",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.23.1",
         "sass": "^1.77.2",
+        "split-type": "^0.3.4",
         "swiper": "^11.1.4"
     },
     "devDependencies": {
